--- a/src/OrchardCore.Themes/TheAdmin/wwwroot/css/admin-layout.css
+++ b/src/OrchardCore.Themes/TheAdmin/wwwroot/css/admin-layout.css
@@ -353,8 +353,8 @@ body:not(.left-sidebar-compact) #ta-left-sidebar #left-nav .btn-nostyle {
   outline: none;
 }
 
-body:not(.left-sidebar-compact) #ta-left-sidebar #left-nav > li > figure > figcaption > .item-label {
-  width: 100%;
+body:not(.left-sidebar-compact) #ta-left-sidebar #left-nav > ul > li > figure > figcaption > .item-label {
+  height: 48px;
 }
 body:not(.left-sidebar-compact) #ta-left-sidebar #left-nav {
   /*.btn-nostyle:focus, .btn-nostyle:active {
